syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "CinemaGrpc";

package Cinema;

service CinemaGrpcService {
	rpc GetBooking(GetBookingGrpcRequestDTO) returns (GetBookingGrpcReplyDTO);
}

message GetBookingGrpcRequestDTO {
	string bookingId = 1;
}

message GetBookingGrpcReplyDTO {
	bool Result = 1;
	string Message = 2;
	int32 StatusCode = 3;
	GetBookingGrpcReplyDataDTO Data = 4;
}

message GetBookingGrpcReplyDataDTO {
	string bookingId = 1;     
    string userId = 2;        
    string movieId = 3;      
	string movieName = 4;
    string startTime = 5;     
    string endTime = 6;       
    string status = 7;        
    string totalPrice = 8; 
}